# HFT-OBS-MMAgent

./: .gitignore  CMakeLists.txt  LICENSE  README.md  get_real_metrics.sh  real_python_metrics_20250701_025154.json  test_build.py
.github/workflows/: ci.yml
docs/: architecture.md  index.md
python/: pyproject.toml  requirements.txt
python/hft_rl/: __init__.py  backtest.py  baseline_agent.py  env.py  report.py  train_ppo.py
python/tests/: test_env.py
scripts/: download_real_data.py  generate_real_backtest.py  python_only_metrics.py  run_core_benchmarks.py  run_real_performance_test.py
src/: itch_parser.cpp  itch_parser.hpp  order_book.cpp  order_book.hpp  replay.cpp  zmq_bridge.cpp
tests/: CMakeLists.txt  bench_orderbook.cpp  order_book_test.cpp
